# AETHER-OS

./: .gitignore  Cargo.toml  pyproject.toml
.agent/rules/: aether-os.rules.md  claude.rules.md
crates/aether-budget/: Cargo.toml
crates/aether-budget/src/: alerts.rs  lib.rs  limiter.rs  tracker.rs
crates/aether-cli/: Cargo.toml
crates/aether-compiler/: Cargo.toml
crates/aether-compliance/: Cargo.toml
crates/aether-context-graph/: Cargo.toml
crates/aether-core/: Cargo.toml
crates/aether-core/src/: error.rs  ids.rs  ledger.rs  lib.rs  memory.rs  tenant.rs  tool.rs
crates/aether-diagnostics/: Cargo.toml
crates/aether-hypervisor/: Cargo.toml
crates/aether-ledger/: Cargo.toml
crates/aether-ledger/src/: block.rs  chain.rs  lib.rs  storage.rs  verify.rs
crates/aether-memory/: Cargo.toml
crates/aether-model-router/: Cargo.toml
crates/aether-network/: Cargo.toml
crates/aether-orchestrator/: Cargo.toml
crates/aether-policy/: Cargo.toml
crates/aether-policy/src/: engine.rs  evaluation.rs  lib.rs  rules.rs
crates/aether-scheduler/: Cargo.toml
crates/aether-server/: Cargo.toml
crates/aether-session/: Cargo.toml
crates/aether-session/src/: history.rs  keys.rs  lib.rs  manager.rs  summary.rs
crates/aether-tool-gateway/: Cargo.toml
crates/aether-transport/: Cargo.toml
crates/aether-workflow/: Cargo.toml
docs/: AETHER_OS_PRD.md
