[workspace]
resolver = "2"
members = [
    "crates/aether-core",
    "crates/aether-tool-gateway",
    "crates/aether-orchestrator",
    "crates/aether-ledger",
    "crates/aether-memory",
    "crates/aether-policy",
    "crates/aether-workflow",
    "crates/aether-model-router",
    "crates/aether-context-graph",
    "crates/aether-budget",
    "crates/aether-transport",
    "crates/aether-session",
    "crates/aether-scheduler",
    "crates/aether-compliance",
    "crates/aether-diagnostics",
    "crates/aether-hypervisor",
    "crates/aether-network",
    "crates/aether-compiler",
    "crates/aether-cli",
    "crates/aether-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Abhishek Jha"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# UUID
uuid = { version = "1", features = ["v4", "serde"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde"] }
# gRPC
tonic = "0.12"
prost = "0.13"
# HTTP
axum = "0.8"
tower = "0.5"
# Schema validation
jsonschema = "0.29"
# Async trait
async-trait = "0.1"
# Semver
semver = { version = "1", features = ["serde"] }
# Concurrent maps
dashmap = "6"
