[package]
name = "aether-cli"
description = "AETHER-OS CLI — create VMs, run agents, deploy, inspect, manage"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../aether-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
