[package]
name = "aether-core"
description = "Shared types, traits, and error handling for AETHER-OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
semver.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha2.workspace = true
jsonschema.workspace = true
