[package]
name = "aether-hypervisor"
description = "VM lifecycle — MicroVM, DevVM, AgentVM, SecureVM creation/allocation/destruction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-policy = { path = "../aether-policy" }
aether-budget = { path = "../aether-budget" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
