[package]
name = "aether-model-router"
description = "Intelligent model routing — selects LLM based on complexity, cost, latency, confidence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-budget = { path = "../aether-budget" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
