[package]
name = "aether-orchestrator"
description = "Intent parsing, DAG construction, and agent scheduling for AETHER-OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
