[package]
name = "aether-policy"
description = "Centralized policy engine — evaluates who can do what, when, under what constraints"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
