[package]
name = "aether-transport"
description = "Multi-channel transport layer — Discord, Telegram, Slack, WebSocket, Webhook adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-session = { path = "../aether-session" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
